added second article

--- a/blog.html
+++ b/blog.html
@@ -21,6 +21,27 @@
     
         </div>
     </div>
+	
+
+	    <div class="cards">
+      <div class="card">
+	<div class="card__content">
+	  <p>
+	    Why I Use Linux
+	  </p>
+	  <p>
+	    
+	  </p>
+	  
+	</div>
+	<div class="card__info">
+	  <div>
+	    <a class="card__link" href="articles/02-why-i-use-linux.html">View Article</a>
+	  </div>
+	</div>
+      </div>
+    </div>
+	
     <div class="cards">
       <div class="card">
 	<div class="card__content">
@@ -34,11 +55,13 @@
 	</div>
 	<div class="card__info">
 	  <div>
-	    <a class="card__link" href="articles/Introduction-to-my-blog.html">View Article</a>
+	    <a class="card__link" href="articles/01-Introduction-to-my-blog.html">View Article</a>
 	  </div>
 	</div>
       </div>
     </div>
+
+	
 
 </body>
 </html>
